--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Will You Be My Valentine?</title>
+    <title>ırmakım❤️, will You Be My Valentine?</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -15,7 +15,7 @@
           alt="Valentine"
           class="gif-image"
         />
-        <h1 id="question">Will you be my Valentine?</h1>
+        <h1 id="question">ırmakım❤️, will you be my Valentine?</h1>
         <div class="button-container">
           <button class="btn btn-yes" id="yesButton">Yes</button>
           <button class="btn btn-no" id="noButton">No</button>
